[iOS] Update the initial header height at every Pull To Action start.

Before this CL, the "initial header height" was only set when the
CRWWebController changed.
Since the iPhone X, the header height can change when the orientation
changes.

With this CL, the header height is set whenever the Pull To Action
flow starts.
Note that an on-going Pull To Action is cancelled if the screen is rotated,
so the  header height can't change in the middle of a Pull To Action.


Bug: 773643
Change-Id: I6891d5da8de610d8cbfcab0f880c6f807ec98df5
Reviewed-on: https://chromium-review.googlesource.com/718099
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508742}