ios/chrome/browser/ui/overscroll_actions/overscroll_actions_controller.mm
@@ -185,8 +185,7 @@ NSString* const kOverscrollActionsDidEnd = @"OverscrollActionsDidStop";
 // call. The cached value is reset when the webview proxy is set.
 @property(nonatomic, readonly) CGFloat initialHeaderInset;
 // Initial height of the header view.
-// This property is set from the delegate headerHeight and cached on first
-// call. The cached value is reset when the webview proxy is set.
+// This property is set everytime the user starts pulling.
 @property(nonatomic, readonly) CGFloat initialHeaderHeight;
 // Redefined to be read-write.
 @property(nonatomic, assign, readwrite) OverscrollState overscrollState;
@@ -349,6 +348,7 @@ NSString* const kOverscrollActionsDidEnd = @"OverscrollActionsDidStop";
       // Set the contentInset to remove the bounce that would fight with drag.
       [self setScrollViewContentInset:insets];
       [self scrollView].scrollIndicatorInsets = insets;
+      _initialHeaderHeight = [[self delegate] overscrollHeaderHeight];
       self.overscrollState = OverscrollState::STARTED_PULLING;
     }
     [self updateWithVerticalOffset:-contentOffsetFromExpandedHeader];
@@ -512,7 +512,6 @@ NSString* const kOverscrollActionsDidEnd = @"OverscrollActionsDidStop";
              controller:(CRWWebController*)webController {
   DCHECK([webViewProxy scrollViewProxy]);
   _initialHeaderInset = 0;
-  _initialHeaderHeight = 0;
   _webViewProxy = webViewProxy;
   [_webViewScrollViewProxy removeObserver:self];
   _webViewScrollViewProxy = [webViewProxy scrollViewProxy];
@@ -818,13 +817,6 @@ NSString* const kOverscrollActionsDidEnd = @"OverscrollActionsDidStop";
         [[self delegate] overscrollActionsControllerHeaderInset:self];
   }
   return _initialHeaderInset;
-}
-
-- (CGFloat)initialHeaderHeight {
-  if (_initialHeaderHeight == 0) {
-    _initialHeaderHeight = [[self delegate] overscrollHeaderHeight];
-  }
-  return _initialHeaderHeight;
 }
 
 #pragma mark - Bounce dynamic
